# toy-storage-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: codec.rs  communication.rs  lib.rs  main.rs  server.rs  store.rs
src/api/: codec.rs  mod.rs  server.rs  service.rs  types.rs
src/storage/: inmemory.rs  mod.rs  types.rs
