[package]
authors = ["Rafael Varago <varago.rafael@gmail.com>"]
edition = "2018"
name = "toy-storage"
description = "This is a toy in-memory storage server with data exchanged over the network"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
structopt = "0.3.25"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
