[package]
authors = ["Rafael Varago <varago.rafael@gmail.com>"]
edition = "2018"
name = "toy-storage"
description = "This is a toy in-memory storage server with data exchanged over the network"
version = "0.1.0"

[dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
proptest = "1"
