[package]
authors = ["Rafael Varago <varago.rafael@gmail.com>"]
edition = "2018"
name = "toy-storage"
description = "This is a toy in-memory storage server with data exchanged over the network"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
bytes = "1"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1"
